[package]
name = "rm-reth"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

[profile.release]
opt-level = "z"
debug = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
strip = "symbols"
codegen-units = 1

[workspace]
members = ["host", "types", "node", "common", "block", "transaction", "config", "linker", "api"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
host = { path = "host" }
node = { path = "node" }
types = { path = "types" }
common = { path = "common" }
block = { path = "block" }
transaction = { path = "transaction" }
config = { path = "config" }
linker = { path = "linker" }
api = { path = "api" }

anyhow = "1.0.100"
figment = { version = "0.10.19", features = ["yaml"] }
rustls = "0.23.32"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"
num-traits = "0.2.19"
phf = { version = "0.12", features = ["macros"] }
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"
webpki-roots = "1.0.3"
num_enum = "0.7.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
hex = "0.4.3"
async-trait = "0.1.89"
ambassador = "0.4.2"
rand = "0.9.2"
quote = "1.0.41"
proc-macro2 = "1.0.103"
syn = { version = "2.0.108", features = ["full"] }
dashmap = "6.1.0"
faster-hex = "0.10.0"
blake3 = "1.8.2"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }

[dependencies]
types = { workspace = true }
host = { workspace = true }
node = { workspace = true }
common = { workspace = true }
block = { workspace = true }
transaction = { workspace = true }
config = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
rand.workspace = true