

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

[profile.release]
opt-level = "z"
debug = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
strip = "symbols"
codegen-units = 1

[workspace]
members = [
    "node/types",
]

[workspace.package]
name = "rm-reth"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rm-reth-types = { path = "node/types" }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.102"
