[package]
name = "block"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
tokio.workspace = true
config.workspace = true
transaction.workspace = true
dashmap.workspace = true
common.workspace = true
linker.workspace = true
parity-scale-codec.workspace = true