[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
types.workspace = true
network.workspace = true

thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
figment.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
phf.workspace = true
clap.workspace = true
clap_derive.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true