[package]
name = "types"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
num_enum.workspace = true
bincode.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true