[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
hex.workspace = true
faster-hex.workspace = true
blake3.workspace = true
serde.workspace = true
parity-scale-codec.workspace = true