[package]
name = "types"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
parity-scale-codec.workspace = true
alloy-primitives.workspace = true
linker.workspace = true
thiserror.workspace = true
config.workspace = true
tokio.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
faster-hex.workspace = true
blake3.workspace = true