[package]
name = "node"
version.workspace = true
edition.workspace = true

[dependencies]
rm-reth-types.workspace = true
storage.workspace = true
vm.workspace = true
thiserror.workspace = true
anyhow.workspace = true
arc-swap.workspace = true

[dev-dependencies]
tokio.workspace = true
rand.workspace = true